--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sha1": "^1.1.1",
     "url-loader": "^0.5.7",
     "vue": "^1.0.0",
+    "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
     "weixin-js-sdk": "^1.0.7"
   },
@@ -33,15 +34,13 @@
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
-    "vue-loader": "^8.2.1",
+    "vue-loader": "^8.3.0",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0",
-
     "babel-eslint": "^6.1.2",
     "babel-register": "^6.0.0",
     "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.23.0",
     "eslint": "^2.10.2",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.3.0",
@@ -52,19 +51,11 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.12.0",
-    "json-loader": "^0.5.4",
     "ora": "^0.2.0",
     "shelljs": "^0.6.0",
-    "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.2.0",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^8.3.0",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
     "webpack-merge": "^0.8.3",
